--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-vue": "^3.2.0",
+    "terser": "^5.16.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
